Address buffer hardening compiler warning in crashWithClassName https://bugs.webkit.org/show_bug.cgi?id=287825

Reviewed by Geoffrey Garen.

Addressed the buffer hardening compiler warning in crashWithClassName for macOS Sonoma builds.

* Source/WebKit/Shared/Cocoa/CoreIPCSecureCoding.mm:
(WebKit::crashWithClassName):

Canonical link: https://commits.webkit.org/290516@main